# diploma-research

./: .gitignore  README.md  accumulator_analysis.py  accumulator_table.csv  cross_chain_analysis.py  cross_chain_costs.csv  cross_validate.py  membership_bench.go  zk_scheme_analysis.py  zk_scheme_table.csv
benchmarks/: README.md
benchmarks/halo2/: Cargo.toml
benchmarks/halo2/src/: bench.rs  circuit.rs  witness.rs
benchmarks/risc0/: Cargo.toml
benchmarks/risc0/host/: Cargo.toml
benchmarks/risc0/host/src/: main.rs
benchmarks/risc0/methods/: Cargo.toml
benchmarks/risc0/methods/guest/: Cargo.toml
benchmarks/risc0/methods/guest/src/: main.rs
benchmarks/risc0/methods/src/: lib.rs
benchmarks/spartan/: Cargo.toml  spartan_results.csv
benchmarks/spartan/src/: bench.rs  r1cs_builder.rs
empirical/: go.mod  groth16_results.csv  main.go  plonk_results.csv
paper/: main.docx  main.tex  refs.bib
