[package]
name = "halo2-membership"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench"
path = "src/bench.rs"

[dependencies]
# Axiom halo2-lib (uses halo2-axiom internally, not PSE fork)
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.4.1" }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", tag = "v0.4.1" }

# Everything else
rand = "0.8"
ff = "0.13"
group = "0.13"
serde = { version = "1", features = ["derive"] }
csv = "1.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
opt-level = 3
