[package]
name = "membership-host"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
risc0-zkvm = { version = "1", features = ["prove"] }
membership-methods = { path = "../methods" }

k256 = { version = "0.13", features = ["ecdsa", "arithmetic"] }
sha2 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
bincode = "1"
anyhow = "1"
