[package]
name = "membership-guest"
version.workspace = true
edition.workspace = true

[dependencies]
risc0-zkvm = { version = "1", default-features = false, features = ["std"] }
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
sha2 = { version = "0.10", default-features = false }
